# advent-of-code

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg
advent_of_code/2020/: day_05.py  day_06.py  day_10.py
advent_of_code/2021/: day_01.py  day_04.py  day_06.py  day_07.py  day_08.py  day_10.py  day_11.py  day_12.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
src/aoc/: __init__.py  __main__.py
src/aoc/2020/: day_01.py  day_02.py  day_03.py  day_04.py  day_07.py  day_08.py  day_09.py  day_11.py  day_12.py
src/aoc/2021/: day_02.py  day_03.py  day_04.py  day_05.py  day_09.py  day_12.py  day_13.py  day_15.py  day_17.py  day_18.py  day_23.py
src/aoc/2022/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_13.py
