[metadata]
name = advent_of_code
version = 2021
description= Solution of Advent of Code puzzles
long_description = file: README.rst
license = MIT License
keywords = advent, code, puzzles
author = Mario A. Ferriz
url = https://github.com/mferriz/advent-of-code
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Scientific/Engineering
    Topic :: Software Development
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: PyPy
    Typing :: Typed

[options]
python_requires = >= 3.8
packages = advent_of_code
include_package_data = True
install_requires =
    bitarray>=2.3.4
    numpy>=1.21.4
scripts = bin/aoc

[options.package_data]
* = *.txt

[options.extras_require]
dev =
    build>=0.7.0
    flake8>=3.9.2
    flake8-annotations>=2.7.0
    flake8-builtins>=1.5.3
    flake8-bugbear>=21.11.29
    flake8-comprehensions>=3.7.0
    flake8-docstrings>=1.6.0
    flake8-secure-coding-standard>=1.2.1
    flake8-simplify>=0.14.2
    jedi>=0.18.1
    mccabe>=0.6.1
    mypy>=0.910
    pre-commit>=2.16.0
    pybadges>=2.2.1
    pycodestyle>=2.7.0
    pydocstyle>=6.1.1
    pyflakes>=2.3.1
    pylint>=2.11.1
    pyroma>=3.2
    python-lsp-server>=1.3.2
    rope>=0.22.0
    twine>=3.6.2
    yapf>=0.31.0





